tests/build/cases/ui_node/invalid_delegate_list_pair.stderr
error: expected `, delegate_list_mut = <expr>`
 --> cases/ui_node/invalid_delegate_list_pair.rs:6:33
  |
6 | #[ui_node(delegate_list = &self.inner)]
  |                                 ^^^^^

error: expected `, delegate_list = <expr>`
  --> cases/ui_node/invalid_delegate_list_pair.rs:12:41
   |
12 | #[ui_node(delegate_list_mut = &mut self.inner)]
   |                                         ^^^^^

warning: unused imports: `UiNodeList`, `UiNode`
 --> cases/ui_node/invalid_delegate_list_pair.rs:1:30
  |
1 | use zero_ui::core::{ui_node, UiNode, UiNodeList};
  |                              ^^^^^^  ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
